tests/errors/surf_cont_07.ki
# Set.remove of a value not present
var s = Set()
s.add(1)
discard s.remove(9)
